--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.3",
+    "body-parser": "^1.20.1",
+    "chalk": "^4.0.0",
     "cors": "^2.8.5",
     "date-and-time": "^2.4.2",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^6.8.4",
     "nodemailer": "^6.9.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
   }
 }
